# kalamos

./: Cargo.toml  README.md  todos.md
.github/workflows/: test.yml
examples/simple-blog/layouts/: default.html  post.html
examples/simple-blog/pages/: about.md  atom.xml  index.html
examples/simple-blog/posts/: 2025-01-11-first-post.md  2025-01-12-second-post.md
examples/simple-blog/static/stylesheets/: reset.css  site.css
src/: config.rs  deploy.rs  lib.rs  main.rs  markdown.rs  page.rs  parser.rs  post.rs  render.rs  serve.rs  util.rs  watch.rs
src/markdown/: parser.rs
tests/it/: main.rs  markdown.rs  page.rs  parser.rs  post.rs  render.rs  support.rs
tests/it/snapshots/: it__render__render_dir.snap
tests/it/testdata/simple_site/layouts/: default.html  post.html
tests/it/testdata/simple_site/pages/: first.md  home.md  index.md
tests/it/testdata/simple_site/posts/: 2024-12-27-first.md  2024-12-28-second.md  first.md  home.md
